updated .net version to 8

--- a/Graphics.csproj
+++ b/Graphics.csproj
@@ -1,3 +1,30 @@
-<Project Sdk="Microsoft.NET.Sdk">    <!-- NOTE: TargetFrameworkSwitcher inserts it, DO NOT EDIT YOURSELF and IT REQUIRES TOP-LEVEL EVALUATION BEFORE USING "TargetFramework" VARIABLE -->
+<Project Sdk="Microsoft.NET.Sdk">
+    <!-- NOTE: TargetFrameworkSwitcher inserts it, DO NOT EDIT YOURSELF and IT REQUIRES TOP-LEVEL EVALUATION BEFORE USING "TargetFramework" VARIABLE -->
     <Import Project="$(MSBuildProjectDirectory)\TargetFrameworkSwitcher.targets" Condition="Exists('$(MSBuildProjectDirectory)\TargetFrameworkSwitcher.targets')" />
-    <PropertyGroup>        <OutputType>Exe</OutputType>        <TargetFramework>net7.0</TargetFramework>        <RootNamespace>Graphics</RootNamespace>        <Nullable>enable</Nullable>    </PropertyGroup>    <!-- Adding assets to bin folder -->    <Target Name="CopyAssets" AfterTargets="AfterBuild">        <ItemGroup>            <_GlfwFiles Include="$(MSBuildProjectDirectory)\glfw\**" />        </ItemGroup>        <Copy SourceFiles="@(_GlfwFiles)" DestinationFolder="$(OutDir)\%(RecursiveDir)" />    </Target>    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'" />    <ItemGroup>        <PackageReference Include="Silk.NET" Version="2.15.0" />        <PackageReference Include="Silk.NET.Core" Version="2.15.0" />        <PackageReference Include="Silk.NET.Windowing.Common" Version="2.15.0" />        <PackageReference Include="Silk.NET.Windowing.Glfw" Version="2.15.0" />        <PackageReference Include="SkiaSharp" Version="2.88.3" />        <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.3" />        <PackageReference Include="SixLabors.ImageSharp" Version="2.1.2" />    </ItemGroup></Project>
+
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net8.0</TargetFramework>
+        <RootNamespace>Graphics</RootNamespace>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
+
+    <!-- Adding assets to bin folder -->
+    <Target Name="CopyAssets" AfterTargets="AfterBuild">
+        <ItemGroup>
+            <_GlfwFiles Include="$(MSBuildProjectDirectory)\glfw\**" />
+        </ItemGroup>
+        <Copy SourceFiles="@(_GlfwFiles)" DestinationFolder="$(OutDir)\%(RecursiveDir)" />
+    </Target>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'" />
+    <ItemGroup>
+        <PackageReference Include="Silk.NET" Version="2.15.0" />
+        <PackageReference Include="Silk.NET.Core" Version="2.15.0" />
+        <PackageReference Include="Silk.NET.Windowing.Common" Version="2.15.0" />
+        <PackageReference Include="Silk.NET.Windowing.Glfw" Version="2.15.0" />
+        <PackageReference Include="SkiaSharp" Version="2.88.3" />
+        <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.3" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="2.1.2" />
+    </ItemGroup>
+</Project>
